// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when applied with \`test\` option matches snapshot for \`false\` value ({Boolean}): assets 1`] = `
Array [
  Array [
    "0.async.dbe59b7ea0e1a63e45d4.js",
    130,
  ],
  Array [
    "0.async.dbe59b7ea0e1a63e45d4.js.gz",
    117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png.gz",
    73160,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg.gz",
    393,
  ],
  Array [
    "js.b329671af0217355535e.js",
    10267,
  ],
  Array [
    "js.b329671af0217355535e.js.gz",
    2798,
  ],
]
`;

exports[`when applied with \`test\` option matches snapshot for \`false\` value ({Boolean}): errors 1`] = `Array []`;

exports[`when applied with \`test\` option matches snapshot for \`false\` value ({Boolean}): warnings 1`] = `Array []`;

exports[`when applied with \`test\` option matches snapshot for \`true\` value ({Boolean}): assets 1`] = `
Array [
  Array [
    "0.async.dbe59b7ea0e1a63e45d4.js.gz",
    117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png.gz",
    73160,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg.gz",
    393,
  ],
  Array [
    "js.b329671af0217355535e.js.gz",
    2798,
  ],
]
`;

exports[`when applied with \`test\` option matches snapshot for \`true\` value ({Boolean}): errors 1`] = `Array []`;

exports[`when applied with \`test\` option matches snapshot for \`true\` value ({Boolean}): warnings 1`] = `Array []`;
